--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhrasesActivity"
-            android:label="@string/category_phrases">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ColorsActivity"
-            android:label="@string/category_colors"/>
-        <activity android:name=".FamilyActivity"
-            android:label="@string/category_family"/>
-        <activity android:name=".NumbersActivity"
-            android:label="@string/category_numbers"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PhrasesActivity"
+            android:label="@string/category_phrases"/>
+        <activity android:name=".ColorsActivity"
+            android:label="@string/category_colors"/>
+        <activity android:name=".FamilyActivity"
+            android:label="@string/category_family"/>
+        <activity android:name=".NumbersActivity"
+            android:label="@string/category_numbers"/>
     </application>
 
 </manifest>
